tests/ui/suggestions/unnamable-types.stderr
error: missing type for `static` item
  --> $DIR/unnamable-types.rs:6:9
   |
LL | static A = 5;
   |         ^ help: provide a type for the static variable: `: i32`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for static variables
  --> $DIR/unnamable-types.rs:10:11
   |
LL | static B: _ = "abc";
   |           ^ not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL - static B: _ = "abc";
LL + static B: &str = "abc";
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for static variables
  --> $DIR/unnamable-types.rs:17:11
   |
LL | static C: _ = || 42;
   |           ^ not allowed in type signatures
   |
note: however, the inferred type `{closure@unnamable-types.rs:17:15}` cannot be named
  --> $DIR/unnamable-types.rs:17:15
   |
LL | static C: _ = || 42;
   |               ^^^^^

error: missing type for `static` item
  --> $DIR/unnamable-types.rs:23:9
   |
LL | static D = S { t: { let i = 0; move || -> i32 { i } } };
   |         ^
   |
note: however, the inferred type `S<{closure@unnamable-types.rs:23:32}>` cannot be named
  --> $DIR/unnamable-types.rs:23:12
   |
LL | static D = S { t: { let i = 0; move || -> i32 { i } } };
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: missing type for `static` item
  --> $DIR/unnamable-types.rs:29:9
   |
LL | static E = foo;
   |         ^ help: provide a type for the static variable: `: fn() -> i32`

error: missing type for `static` item
  --> $DIR/unnamable-types.rs:32:9
   |
LL | static F = S { t: foo };
   |         ^ help: provide a type for the static variable: `: S<fn() -> i32>`

error: missing type for `static` item
  --> $DIR/unnamable-types.rs:37:9
   |
LL | static G = #[coroutine] || -> i32 { yield 0; return 1; };
   |         ^
   |
note: however, the inferred type `{coroutine@$DIR/unnamable-types.rs:37:25: 37:34}` cannot be named
  --> $DIR/unnamable-types.rs:37:25
   |
LL | static G = #[coroutine] || -> i32 { yield 0; return 1; };
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0121`.
